Fix Spacing for Clone

--- a/styles.css
+++ b/styles.css
@@ -335,7 +335,7 @@ html, body {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 400px;
+	height: 100%;
 }
 
 
@@ -373,6 +373,8 @@ html, body {
 .clone-item {
     margin: 0;
     /*flex-grow: 1; */
+    width: 100%;
+    overflow: hidden;
 }
 
 .photo-title {
@@ -384,7 +386,9 @@ html, body {
 }
 
 .photography {
-    max-width: 500px;
+    max-height: 100%;
+    max-width: 100%;
+    width: auto;
     text-align: center;
 }
 
